Fix sinatra erb example

--- a/examples/persistence/views/index.erb
+++ b/examples/persistence/views/index.erb
@@ -4,9 +4,9 @@
     "DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
-    <title><%= title %></title>
+    <title><%= @title %></title>
   </head>
   <body>
-    <%= body =>
+    <%= @body %>
   </body>
 </html>
