--- a/examples/sinatra/views/layout.erb
+++ b/examples/sinatra/views/layout.erb
@@ -5,8 +5,36 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <title>The Blog App</title>
+    <link rel="stylesheet" href="/stylesheets/blog.css"
+          type="text/css" media="screen" charset="utf-8" />
   </head>
   <body>
-    <%= yield %>
+    <div id="flash">
+      <% unless @flash.nil? %>
+      <h2>NOTICE</h2>
+      <p><%= get_flash %></p>
+        <% end %>
+    </div>
+
+    <div id="main"> <%= yield %> </div>
+
+    <div id="debug">
+      <h2>DEBUG</h2>
+      <table>
+        <tr>
+          <td>$blogs</td>
+          <td><%= $blogs.inspect %></td>
+        </tr>
+        <tr>
+          <td>$:</td>
+          <td><%= $:.inspect %></td>
+        </tr>
+        <tr>
+          <td>$LOADED_FEATURES</td>
+          <td><%= $LOADED_FEATURES.inspect %></td>
+        </tr>
+      </table>
+    </div>
+
   </body>
 </html>
