--- a/examples/sinatra/views/layout.erb
+++ b/examples/sinatra/views/layout.erb
@@ -33,6 +33,10 @@
           <td>$LOADED_FEATURES</td>
           <td><%= $LOADED_FEATURES.inspect %></td>
         </tr>
+        <tr>
+          <td>Sinatra::Application</td>
+          <td><%= Sinatra::Application.inspect %></td>
+        </tr>
       </table>
     </div>
 
