Refactor sinatra apps to share layout

--- a/examples/sinatra/simple_blog/views/layout.erb
+++ b/examples/sinatra/simple_blog/views/layout.erb
@@ -1,42 +1,39 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
   <head>
-    <title>Simple Sinatra Blog</title>
+    <title><%= @title || App[:title]%></title>
     <meta http-equiv="Content-Type" content="text/html;  charset=iso-8859-1" />
     <link rel="stylesheet" type="text/css" href="/style.css" media="all" />
   </head>
   <body>
     <div id="container">
       <div id="header">
-        <h1>Simple Sinatra Blog</h1>
+        <h1><%= @title || App[:title] %></h1>
       </div>
       <div id="navigation">
-        <ul class="menu">
-          <li><a href="/post/new">New Post</a></li>
-          <li><a href="/posts">All Posts</a></li>
-          <li><a href="/objectlog">Object Log</a></li>
-        </ul>
+        <%= App[:nav_bar] %>
       </div>
       <div id="content">
         <div class="left"><%= yield %></div>
         <div class="right">
-          <h4>Recent Posts</h4>
-          <p>TBD</p>
+          <% if App[:show_tags] %>
           <h4>Tags</h4>
           <ul>
             <% Tag.all.each do |tag| %>
             <li><a href="/tag/<%= tag.__id__ %>"><%= tag.name %></a></li>
             <% end %>
           </ul>
+          <% end %>
           <h4>About</h4>
-          <p>This is a simple sinatra blog running on MagLev</p>
+          <p>This is a simple sinatra application running on MagLev</p>
           <h4>Credit</h4>
           <p>The layout is <a href="http://css4free.com/wp-content/uploads/templates/zineprint/">zineprint</a>, Designed by
              <a href="http://rizzle.us.to">Rizzle Studios</a>.
         </div>
       </div>
       <div id="footer">
-        Simple Sinatra Blog running on <a href="http://maglev.gemstone.com">MagLev</a>
+        <%= @title || App[:title] %> running on
+        <a href="http://maglev.gemstone.com">MagLev</a>
       </div>
     </div>
   </body>
