Fix bugs and clean up sinatra app a bit

--- a/examples/sinatra/simple_blog/views/debug.erb
+++ b/examples/sinatra/simple_blog/views/debug.erb
@@ -1,4 +1,4 @@
 <h3>Debug Info</h3>
 <ul>
-  <li>options.public: <%= options.public %></li>
+  <li>options.public: <%= @options.public %></li>
 </ul>
