Fix problem with running objectlog standalone: make it relocatable on script_name

--- a/examples/sinatra/simple_blog/views/objectlog.erb
+++ b/examples/sinatra/simple_blog/views/objectlog.erb
@@ -4,7 +4,7 @@
   <tr>
     <td><%= i %></td>
     <td><%= entry.tagged? ? "X" : "" %></td>
-    <td><a href="<%= @@path %>/entry/<%= i %>"> <%= entry.label %></a></td>
+    <td><a href="<%= path_for("/entry/#{i}")%>"> <%= entry.label %></a></td>
     <td><%= entry.object %></td>
     <td><%= entry.timestamp %></td>
   </tr>
