More work on MDB

--- a/src/experimental/mdb/app/views/newpost.erb
+++ b/src/experimental/mdb/app/views/newpost.erb
@@ -1,4 +1,4 @@
-<form method="post" action="/post">
+<form method="post" action="/posts">
   <ul>
     <li>Title: <input type="text" name="title" /> </li>
     <li>Tags:  <input type="text" name="tags" /> </li>
