--- a/src/experimental/mdb/app/views/home.erb
+++ b/src/experimental/mdb/app/views/home.erb
@@ -1,6 +1,6 @@
 <h3>Welcome to a simple blog</h3>
 <ul>
 <% @posts.each do |post| %>
-  <li><a href="/post/<%= post['id'] %>"> <%= post['title'] %></a></li>
+  <li><a href="/posts/<%= post['id'] %>"> <%= post['title'] %></a></li>
 <% end %>
 </ul>
