Client app is back to working (with dimished tag support).

--- a/src/experimental/mdb/app/views/layout.erb
+++ b/src/experimental/mdb/app/views/layout.erb
@@ -25,7 +25,7 @@
           <h4>Tags</h4>
           <ul>
             <% Tag.all.each do |tag| %>
-            <li><a href="/tag/<%= tag.__id__ %>"><%= tag.name %></a></li>
+<!--            <li><a href="/tag/<%= tag.__id__ %>"><%= tag.name %></a></li> -->
             <% end %>
           </ul>
           <% end %>
