--- a/src/experimental/mdb/app/views/post.erb
+++ b/src/experimental/mdb/app/views/post.erb
@@ -1,3 +1,3 @@
 <h3><%= @post.title %></h3>
-<p> Tags: <%= @post.tags.map{ |t| t.name }.join(" ") %> </p>
+<p> Tags: <%= @post.tags.map{ |t| t.to_s }.join(" ") %> </p>
 <p><%= @post.text %></p>
