Added rough cut of object viewer to MDB

--- a/src/experimental/mdb/app/views/layout.erb
+++ b/src/experimental/mdb/app/views/layout.erb
@@ -32,6 +32,8 @@
           <h4>Debug</h4>
           <ul>
             <li>Show <a href="/debug">debug info</a> for the MDB server.</li>
+            <li><a href="http://localhost:4567/_object/object">MDB::Server
+            object viewer</a></li>
           </ul>
 
           <h4>About</h4>
