Made Object Inspector a separate app, and integrate into MDB

--- a/examples/mdb/app/views/layout.erb
+++ b/examples/mdb/app/views/layout.erb
@@ -32,7 +32,7 @@
           <h4>Debug</h4>
           <ul>
             <li>Show <a href="/debug">debug info</a> for the MDB server.</li>
-            <li><a href="http://localhost:4567/_object/object">MDB::Server
+            <li><a href="http://localhost:4567/objectlog/">MDB::Server
             object viewer</a></li>
           </ul>
 
@@ -44,8 +44,9 @@
             data transfer.
           </p>
           <h4>Credit</h4>
-          <p>The layout is <a href="http://css4free.com/wp-content/uploads/templates/zineprint/">zineprint</a>, Designed by
-             <a href="http://rizzle.us.to">Rizzle Studios</a>.
+          <p>The layout is
+            <a href="http://css4free.com/wp-content/uploads/templates/zineprint/">zineprint</a>,
+            Designed by <a href="http://rizzle.us.to">Rizzle Studios</a>.
         </div>
       </div>
       <div id="footer">
