--- a/examples/webstack/views/debug.erb
+++ b/examples/webstack/views/debug.erb
@@ -1,4 +1,6 @@
 <div id="debug">
+  <h2>Runtime info</h2>
+  <p>defined? Maglev <%= defined? Maglev %></p>
   <h2>All Users</h2>
   <ul>
   <% User::ALL_USERS.each do |user| %>
