--- a/examples/webstack/views/login.erb
+++ b/examples/webstack/views/login.erb
@@ -4,11 +4,11 @@
       <legend>Login to MagTag</legend>
         <div>
           <label for="username">Username:</label>
-          <input type="text" id="username" name="username" value="input text" />
+          <input type="text" id="username" name="username" placeholder="user name" autofocus />
         </div>
         <div>
           <label for="password">Password:</label>
-          <input type="password" id="password" name="password" value="password" />
+          <input type="password" id="password" name="password" />
         </div>
         <div>
           <input type="submit" id="login" value="login" />
