--- a/examples/webstack/views/home.erb
+++ b/examples/webstack/views/home.erb
@@ -8,6 +8,29 @@
       <li>following <%= @logged_in_user.num_following %></li>
     </ul>
   </div>
+  <div id="tweet">
+    <h2>Tweet</h2>
+    <form action="tweet" method="post">
+      <fieldset>
+        <legend>Tell people what you're doing</legend>
+          <div>
+            <label for="tweet">tweet:</label>
+            <input name="tweet" type="text" id="tweet" placeholder="tweet away..." size="140" autofocus/>
+          </div>
+          <div>
+            <input type="submit" id="submit" value="submit" />
+          </div>
+        </fieldset>
+    </form>
+
+    <h2>Recent Tweets</h2>
+    <ul>
+    <% @logged_in_user.tweets.each_with_index do |t,i| %>
+      <li><%= t.text %></li>
+    <%  break if i == 5
+       end %>
+    </ul>
+  </div>
   <div id="timeline">
     <h2>Timeline</h2>
     <% if @logged_in_user.timeline.size == 0 %>
