WIP: make app mountable

--- a/examples/webstack/views/debug.erb
+++ b/examples/webstack/views/debug.erb
@@ -1,6 +1,12 @@
 <div id="debug">
   <h2>Runtime info</h2>
   <p>defined? Maglev <%= defined? Maglev %></p>
+  <h2>PATH info</h2>
+  <table>
+  <% request.env.each do |k,v| %>
+    <tr><td><%= k %></td><td><%= v %></td></tr>
+  <% end %>
+  </table>
   <h2>All Users</h2>
   <ul>
   <% User::ALL_USERS.each do |user| %>
